# agents-bar-client-python

./: .gitignore  LICENSE.txt  README.md  example_remote_carpole.py  example_remote_lunar_lander_ddpg.py  pyproject.toml  setup.cfg
.github/workflows/: ossar-analysis.yml
agents_bar/: __init__.py  agents.py  client.py  environments.py  experiments.py  remote_agent.py  types.py  utils.py
agentsbar/: __init__.py  agents.py  environments.py  experiments.py  leagues.py  remote_agent.py  types.py  utils.py
ai_traineree_client/: __init__.py  remote_agent.py  types.py  utils.py
examples/: example_create_agent_environment.py  example_remote_cartpole_dqn.py  example_remote_execution.py  example_remote_lunar_lander_ddpg.py
