[metadata]
name = ai-traineree-client
version = 0.1.1
author = Dawid Laszuk
author_email = ai-traineree-client@dawid.lasz.uk
description = A client to work with AI Traineree agents in the Agents Bar (https://agents.bar).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laszukdawid/ai-traineree-client
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.6
keywords = AI, RL, DeRL, ML, Deep Reinforcment Learning, Machine Learning
install_requires =
    requests>=2.25
    tenacity
    gym

[flake8]
ignore = E203,
    E226,  # I like to group operations. What are you going to do about it, huh?
    E252,  # Ain't nobody tell me how to type arguments
    W503
max_line_length = 150
